
(rule
 (targets c_flags.sexp)
  (action
 (with-stdout-to c_flags.sexp
    (system "echo -n '('; pkg-config --cflags SDL2_ttf; echo -n ')'"))))

(rule
 (targets c_library.sexp)
  (action
 (with-stdout-to c_library.sexp
    (system "echo -n '('; pkg-config --libs SDL2_ttf; echo -n ')'"))))

(library
 (name camlSDL2_ttf)
 (public_name caml-sdl2-ttf)
 (libraries caml-sdl2)
 (modes native)
 (public_headers (glob_files camlsdl2_ttf/*.h))
 (foreign_stubs
  (language c)
  (names ttf_stub)
  (flags :standard (:include c_flags.sexp)))
 (c_library_flags (:include c_library.sexp)))

